# frame-0.4

./: README.md  frame.sublime-project  frame.sublime-workspace
scripts/: sandbox.sh  test.sh
src/: CMakeLists.txt
src/frame/: CMakeLists.txt  Component.hpp  Entity.hpp  Frame.hpp  FrameInterface.h  Node.hpp  Signals.hpp  System.hpp  querymap.hpp
src/frame-test/: CMakeLists.txt  main.cpp
src/frame-test/tests/: test_frame.h  test_signals.h
src/frame-test/tests/components/: Name.hpp  Position.hpp
src/frame/core/: Children.hpp  List.hpp  Parent.hpp
src/frame/include/frame/: Archive.h  Component.h  Entity.h  Event.h  Frame.h  Node.h  Singleton.h  System.h
src/frame/include/frame/core/: Children.h  Parent.h
src/frame/include/frame/interface/: FrameInterface.h
src/frame/include/frame/macros/: component_mask_macro.h
src/frame/source/: Archive.cpp  CMakeLists.txt  Children.cpp  Component.cpp  Frame.cpp  Parent.cpp
src/frame_sandbox/: CMakeLists.txt  components.cpp  entity_factories.hpp  main.cpp
src/frame_sandbox/components/: Active.cpp  Active.h  BoxNode.cpp  BoxNode.h  GameEntity.cpp  GameEntity.h  GameEntityContainer.cpp  GameEntityContainer.h  PhysicsBody.hpp  PhysicsWorld.hpp  RenderTexture.cpp  RenderTexture.h  RenderTexture.hpp  Slot.hpp  Slots.hpp  Sprite.hpp
src/frame_sandbox/singletons/: GameState.h
src/frame_sandbox/systems/: ActiveBoxes.hpp  FixedStep.hpp  GameWindow.hpp  Physics.hpp  Render.hpp  RenderBoxes.hpp  Window.hpp
src/frame_test/: CMakeLists.txt  components.cpp  main.cpp
src/frame_test/tests/: test_component.h  test_core.h  test_event.h  test_frame.h  test_metabox.h  test_serialization.h  test_sfml.h  test_singleton.h  test_subframe.h  test_system.h
src/frame_test/tests/components/: Name.h  Position.h  Trigger.h  Velocity.h
src/frame_test/tests/systems/: Handle.h  Physics.h
subl/: frame.sublime-project  frame.sublime-workspace
